femtocode/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> suite
Rule 2     body -> body_star suite
Rule 3     body_star -> SEMI
Rule 4     body_star -> body_star SEMI
Rule 5     suite -> expression
Rule 6     suite -> expression suite_star
Rule 7     suite -> suite_star2 expression
Rule 8     suite -> suite_star2 expression suite_star3
Rule 9     suite_star -> SEMI
Rule 10    suite_star -> suite_star SEMI
Rule 11    suite_star3 -> SEMI
Rule 12    suite_star3 -> suite_star3 SEMI
Rule 13    suite_star2 -> assignment
Rule 14    suite_star2 -> assignment suite_star2_star
Rule 15    suite_star2 -> suite_star2 assignment
Rule 16    suite_star2 -> suite_star2 assignment suite_star2_star
Rule 17    suite_star2_star -> SEMI
Rule 18    suite_star2_star -> suite_star2_star SEMI
Rule 19    lvalues -> NAME
Rule 20    lvalues -> NAME COMMA
Rule 21    lvalues -> lvalues_star NAME
Rule 22    lvalues -> lvalues_star NAME COMMA
Rule 23    lvalues_star -> NAME COMMA
Rule 24    lvalues_star -> lvalues_star NAME COMMA
Rule 25    assignment -> lvalues EQUAL closed_expression
Rule 26    assignment -> fcnndef
Rule 27    fcnndef -> DEF NAME LPAR paramlist RPAR closed_exprsuite
Rule 28    expression -> ifblock
Rule 29    expression -> fcndef
Rule 30    expression -> or_test
Rule 31    closed_expression -> closed_ifblock
Rule 32    closed_expression -> fcndef
Rule 33    closed_expression -> or_test SEMI
Rule 34    fcndef -> LBRACE paramlist RIGHTARROW suite RBRACE
Rule 35    fcn1def -> parameter RIGHTARROW expression
Rule 36    fcn1def -> parameter RIGHTARROW LBRACE suite RBRACE
Rule 37    paramlist -> parameter
Rule 38    paramlist -> parameter COMMA
Rule 39    paramlist -> paramlist_star parameter
Rule 40    paramlist -> paramlist_star parameter COMMA
Rule 41    paramlist_star -> parameter COMMA
Rule 42    paramlist_star -> paramlist_star parameter COMMA
Rule 43    parameter -> NAME
Rule 44    parameter -> NAME EQUAL expression
Rule 45    exprsuite -> COLON expression
Rule 46    exprsuite -> LBRACE suite RBRACE
Rule 47    exprsuite -> COLON LBRACE suite RBRACE
Rule 48    closed_exprsuite -> COLON closed_expression
Rule 49    closed_exprsuite -> LBRACE suite RBRACE
Rule 50    closed_exprsuite -> COLON LBRACE suite RBRACE
Rule 51    ifblock -> IF expression exprsuite ELSE exprsuite
Rule 52    ifblock -> IF expression exprsuite ifblock_star ELSE exprsuite
Rule 53    ifblock_star -> ELIF expression exprsuite
Rule 54    ifblock_star -> ifblock_star ELIF expression exprsuite
Rule 55    closed_ifblock -> IF expression exprsuite ELSE closed_exprsuite
Rule 56    closed_ifblock -> IF expression exprsuite closed_ifblock_star ELSE closed_exprsuite
Rule 57    closed_ifblock_star -> ELIF expression exprsuite
Rule 58    closed_ifblock_star -> closed_ifblock_star ELIF expression exprsuite
Rule 59    or_test -> and_test
Rule 60    or_test -> and_test or_test_star
Rule 61    or_test_star -> OR and_test
Rule 62    or_test_star -> or_test_star OR and_test
Rule 63    and_test -> not_test
Rule 64    and_test -> not_test and_test_star
Rule 65    and_test_star -> AND not_test
Rule 66    and_test_star -> and_test_star AND not_test
Rule 67    not_test -> NOT not_test
Rule 68    not_test -> comparison
Rule 69    comparison -> arith_expr
Rule 70    comparison -> arith_expr comparison_star
Rule 71    comparison_star -> comp_op arith_expr
Rule 72    comparison_star -> comparison_star comp_op arith_expr
Rule 73    comp_op -> LESS
Rule 74    comp_op -> GREATER
Rule 75    comp_op -> EQEQUAL
Rule 76    comp_op -> GREATEREQUAL
Rule 77    comp_op -> LESSEQUAL
Rule 78    comp_op -> NOTEQUAL
Rule 79    comp_op -> IN
Rule 80    comp_op -> NOT IN
Rule 81    arith_expr -> term
Rule 82    arith_expr -> term arith_expr_star
Rule 83    arith_expr_star -> PLUS term
Rule 84    arith_expr_star -> MINUS term
Rule 85    arith_expr_star -> arith_expr_star PLUS term
Rule 86    arith_expr_star -> arith_expr_star MINUS term
Rule 87    term -> factor
Rule 88    term -> factor term_star
Rule 89    term_star -> STAR factor
Rule 90    term_star -> SLASH factor
Rule 91    term_star -> PERCENT factor
Rule 92    term_star -> DOUBLESLASH factor
Rule 93    term_star -> term_star STAR factor
Rule 94    term_star -> term_star SLASH factor
Rule 95    term_star -> term_star PERCENT factor
Rule 96    term_star -> term_star DOUBLESLASH factor
Rule 97    factor -> PLUS factor
Rule 98    factor -> MINUS factor
Rule 99    factor -> power
Rule 100   power -> atom
Rule 101   power -> atom DOUBLESTAR factor
Rule 102   power -> atom power_star
Rule 103   power -> atom power_star DOUBLESTAR factor
Rule 104   power_star -> trailer
Rule 105   power_star -> power_star trailer
Rule 106   atom -> LPAR RPAR
Rule 107   atom -> LPAR expression RPAR
Rule 108   atom -> fcndef LPAR RPAR
Rule 109   atom -> fcndef LPAR arglist RPAR
Rule 110   atom -> STRING
Rule 111   atom -> IMAG_NUMBER
Rule 112   atom -> FLOAT_NUMBER
Rule 113   atom -> HEX_NUMBER
Rule 114   atom -> OCT_NUMBER
Rule 115   atom -> DEC_NUMBER
Rule 116   atom -> ATARG
Rule 117   atom -> NAME
Rule 118   trailer -> LPAR RPAR
Rule 119   trailer -> LPAR arglist RPAR
Rule 120   trailer -> LSQB subscriptlist RSQB
Rule 121   trailer -> DOT NAME
Rule 122   subscriptlist -> subscript
Rule 123   subscriptlist -> subscript COMMA
Rule 124   subscriptlist -> subscript subscriptlist_star
Rule 125   subscriptlist -> subscript subscriptlist_star COMMA
Rule 126   subscriptlist_star -> COMMA subscript
Rule 127   subscriptlist_star -> subscriptlist_star COMMA subscript
Rule 128   subscript -> expression
Rule 129   subscript -> COLON
Rule 130   subscript -> COLON sliceop
Rule 131   subscript -> COLON expression
Rule 132   subscript -> COLON expression sliceop
Rule 133   subscript -> expression COLON
Rule 134   subscript -> expression COLON sliceop
Rule 135   subscript -> expression COLON expression
Rule 136   subscript -> expression COLON expression sliceop
Rule 137   sliceop -> COLON
Rule 138   sliceop -> COLON expression
Rule 139   arglist -> argument
Rule 140   arglist -> argument COMMA
Rule 141   arglist -> arglist_star argument
Rule 142   arglist -> arglist_star argument COMMA
Rule 143   arglist -> fcn1def
Rule 144   arglist_star -> argument COMMA
Rule 145   arglist_star -> arglist_star argument COMMA
Rule 146   argument -> expression
Rule 147   argument -> NAME EQUAL expression

Terminals, with rules where they appear

AND                  : 65 66
ATARG                : 116
COLON                : 45 47 48 50 129 130 131 132 133 134 135 136 137 138
COMMA                : 20 22 23 24 38 40 41 42 123 125 126 127 140 142 144 145
DEC_NUMBER           : 115
DEF                  : 27
DOT                  : 121
DOUBLESLASH          : 92 96
DOUBLESTAR           : 101 103
ELIF                 : 53 54 57 58
ELSE                 : 51 52 55 56
EQEQUAL              : 75
EQUAL                : 25 44 147
FLOAT_NUMBER         : 112
GREATER              : 74
GREATEREQUAL         : 76
HEX_NUMBER           : 113
IF                   : 51 52 55 56
IMAG_NUMBER          : 111
IN                   : 79 80
LBRACE               : 34 36 46 47 49 50
LESS                 : 73
LESSEQUAL            : 77
LPAR                 : 27 106 107 108 109 118 119
LSQB                 : 120
MINUS                : 84 86 98
NAME                 : 19 20 21 22 23 24 27 43 44 117 121 147
NOT                  : 67 80
NOTEQUAL             : 78
OCT_NUMBER           : 114
OR                   : 61 62
PERCENT              : 91 95
PLUS                 : 83 85 97
RBRACE               : 34 36 46 47 49 50
RIGHTARROW           : 34 35 36
RPAR                 : 27 106 107 108 109 118 119
RSQB                 : 120
SEMI                 : 3 4 9 10 11 12 17 18 33
SLASH                : 90 94
STAR                 : 89 93
STRING               : 110
error                : 

Nonterminals, with rules where they appear

and_test             : 59 60 61 62
and_test_star        : 64 66
arglist              : 109 119
arglist_star         : 141 142 145
argument             : 139 140 141 142 144 145
arith_expr           : 69 70 71 72
arith_expr_star      : 82 85 86
assignment           : 13 14 15 16
atom                 : 100 101 102 103
body                 : 0
body_star            : 2 4
closed_expression    : 25 48
closed_exprsuite     : 27 55 56
closed_ifblock       : 31
closed_ifblock_star  : 56 58
comp_op              : 71 72
comparison           : 68
comparison_star      : 70 72
expression           : 5 6 7 8 35 44 45 51 52 53 54 55 56 57 58 107 128 131 132 133 134 135 135 136 136 138 146 147
exprsuite            : 51 51 52 52 53 54 55 56 57 58
factor               : 87 88 89 90 91 92 93 94 95 96 97 98 101 103
fcn1def              : 143
fcndef               : 29 32 108 109
fcnndef              : 26
ifblock              : 28
ifblock_star         : 52 54
lvalues              : 25
lvalues_star         : 21 22 24
not_test             : 63 64 65 66 67
or_test              : 30 33
or_test_star         : 60 62
parameter            : 35 36 37 38 39 40 41 42
paramlist            : 27 34
paramlist_star       : 39 40 42
power                : 99
power_star           : 102 103 105
sliceop              : 130 132 134 136
subscript            : 122 123 124 125 126 127
subscriptlist        : 120
subscriptlist_star   : 124 125 127
suite                : 1 2 34 36 46 47 49 50
suite_star           : 6 10
suite_star2          : 7 8 15 16
suite_star2_star     : 14 16 18
suite_star3          : 8 12
term                 : 81 82 83 84 85 86
term_star            : 88 93 94 95 96
trailer              : 104 105

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . suite
    (2) body -> . body_star suite
    (5) suite -> . expression
    (6) suite -> . expression suite_star
    (7) suite -> . suite_star2 expression
    (8) suite -> . suite_star2 expression suite_star3
    (3) body_star -> . SEMI
    (4) body_star -> . body_star SEMI
    (28) expression -> . ifblock
    (29) expression -> . fcndef
    (30) expression -> . or_test
    (13) suite_star2 -> . assignment
    (14) suite_star2 -> . assignment suite_star2_star
    (15) suite_star2 -> . suite_star2 assignment
    (16) suite_star2 -> . suite_star2 assignment suite_star2_star
    (51) ifblock -> . IF expression exprsuite ELSE exprsuite
    (52) ifblock -> . IF expression exprsuite ifblock_star ELSE exprsuite
    (34) fcndef -> . LBRACE paramlist RIGHTARROW suite RBRACE
    (59) or_test -> . and_test
    (60) or_test -> . and_test or_test_star
    (25) assignment -> . lvalues EQUAL closed_expression
    (26) assignment -> . fcnndef
    (63) and_test -> . not_test
    (64) and_test -> . not_test and_test_star
    (19) lvalues -> . NAME
    (20) lvalues -> . NAME COMMA
    (21) lvalues -> . lvalues_star NAME
    (22) lvalues -> . lvalues_star NAME COMMA
    (27) fcnndef -> . DEF NAME LPAR paramlist RPAR closed_exprsuite
    (67) not_test -> . NOT not_test
    (68) not_test -> . comparison
    (23) lvalues_star -> . NAME COMMA
    (24) lvalues_star -> . lvalues_star NAME COMMA
    (69) comparison -> . arith_expr
    (70) comparison -> . arith_expr comparison_star
    (81) arith_expr -> . term
    (82) arith_expr -> . term arith_expr_star
    (87) term -> . factor
    (88) term -> . factor term_star
    (97) factor -> . PLUS factor
    (98) factor -> . MINUS factor
    (99) factor -> . power
    (100) power -> . atom
    (101) power -> . atom DOUBLESTAR factor
    (102) power -> . atom power_star
    (103) power -> . atom power_star DOUBLESTAR factor
    (106) atom -> . LPAR RPAR
    (107) atom -> . LPAR expression RPAR
    (108) atom -> . fcndef LPAR RPAR
    (109) atom -> . fcndef LPAR arglist RPAR
    (110) atom -> . STRING
    (111) atom -> . IMAG_NUMBER
    (112) atom -> . FLOAT_NUMBER
    (113) atom -> . HEX_NUMBER
    (114) atom -> . OCT_NUMBER
    (115) atom -> . DEC_NUMBER
    (116) atom -> . ATARG
    (117) atom -> . NAME

    SEMI            shift and go to state 36
    IF              shift and go to state 22
    LBRACE          shift and go to state 1
    NAME            shift and go to state 15
    DEF             shift and go to state 7
    NOT             shift and go to state 20
    PLUS            shift and go to state 32
    MINUS           shift and go to state 17
    LPAR            shift and go to state 3
    STRING          shift and go to state 25
    IMAG_NUMBER     shift and go to state 13
    FLOAT_NUMBER    shift and go to state 11
    HEX_NUMBER      shift and go to state 27
    OCT_NUMBER      shift and go to state 2
    DEC_NUMBER      shift and go to state 29
    ATARG           shift and go to state 16

    not_test                       shift and go to state 30
    suite                          shift and go to state 19
    lvalues_star                   shift and go to state 18
    fcnndef                        shift and go to state 4
    term                           shift and go to state 33
    lvalues                        shift and go to state 23
    power                          shift and go to state 24
    suite_star2                    shift and go to state 26
    fcndef                         shift and go to state 5
    factor                         shift and go to state 6
    ifblock                        shift and go to state 28
    comparison                     shift and go to state 8
    or_test                        shift and go to state 9
    assignment                     shift and go to state 10
    atom                           shift and go to state 21
    arith_expr                     shift and go to state 35
    expression                     shift and go to state 31
    body_star                      shift and go to state 12
    and_test                       shift and go to state 14
    body                           shift and go to state 34

state 1

    (34) fcndef -> LBRACE . paramlist RIGHTARROW suite RBRACE
    (37) paramlist -> . parameter
    (38) paramlist -> . parameter COMMA
    (39) paramlist -> . paramlist_star parameter
    (40) paramlist -> . paramlist_star parameter COMMA
    (43) parameter -> . NAME
    (44) parameter -> . NAME EQUAL expression
    (41) paramlist_star -> . parameter COMMA
    (42) paramlist_star -> . paramlist_star parameter COMMA

    NAME            shift and go to state 37

    parameter                      shift and go to state 38
    paramlist                      shift and go to state 39
    paramlist_star                 shift and go to state 40

state 2

    (114) atom -> OCT_NUMBER .

    DOUBLESTAR      reduce using rule 114 (atom -> OCT_NUMBER .)
    LPAR            reduce using rule 114 (atom -> OCT_NUMBER .)
    LSQB            reduce using rule 114 (atom -> OCT_NUMBER .)
    DOT             reduce using rule 114 (atom -> OCT_NUMBER .)
    STAR            reduce using rule 114 (atom -> OCT_NUMBER .)
    SLASH           reduce using rule 114 (atom -> OCT_NUMBER .)
    PERCENT         reduce using rule 114 (atom -> OCT_NUMBER .)
    DOUBLESLASH     reduce using rule 114 (atom -> OCT_NUMBER .)
    PLUS            reduce using rule 114 (atom -> OCT_NUMBER .)
    MINUS           reduce using rule 114 (atom -> OCT_NUMBER .)
    LESS            reduce using rule 114 (atom -> OCT_NUMBER .)
    GREATER         reduce using rule 114 (atom -> OCT_NUMBER .)
    EQEQUAL         reduce using rule 114 (atom -> OCT_NUMBER .)
    GREATEREQUAL    reduce using rule 114 (atom -> OCT_NUMBER .)
    LESSEQUAL       reduce using rule 114 (atom -> OCT_NUMBER .)
    NOTEQUAL        reduce using rule 114 (atom -> OCT_NUMBER .)
    IN              reduce using rule 114 (atom -> OCT_NUMBER .)
    NOT             reduce using rule 114 (atom -> OCT_NUMBER .)
    AND             reduce using rule 114 (atom -> OCT_NUMBER .)
    OR              reduce using rule 114 (atom -> OCT_NUMBER .)
    COLON           reduce using rule 114 (atom -> OCT_NUMBER .)
    LBRACE          reduce using rule 114 (atom -> OCT_NUMBER .)
    SEMI            reduce using rule 114 (atom -> OCT_NUMBER .)
    $end            reduce using rule 114 (atom -> OCT_NUMBER .)
    RBRACE          reduce using rule 114 (atom -> OCT_NUMBER .)
    RPAR            reduce using rule 114 (atom -> OCT_NUMBER .)
    COMMA           reduce using rule 114 (atom -> OCT_NUMBER .)
    RSQB            reduce using rule 114 (atom -> OCT_NUMBER .)
    RIGHTARROW      reduce using rule 114 (atom -> OCT_NUMBER .)
    ELSE            reduce using rule 114 (atom -> OCT_NUMBER .)
    ELIF            reduce using rule 114 (atom -> OCT_NUMBER .)


state 3

    (106) atom -> LPAR . RPAR
    (107) atom -> LPAR . expression RPAR
    (28) expression -> . ifblock
    (29) expression -> . fcndef
    (30) expression -> . or_test
    (51) ifblock -> . IF expression exprsuite ELSE exprsuite
    (52) ifblock -> . IF expression exprsuite ifblock_star ELSE exprsuite
    (34) fcndef -> . LBRACE paramlist RIGHTARROW suite RBRACE
    (59) or_test -> . and_test
    (60) or_test -> . and_test or_test_star
    (63) and_test -> . not_test
    (64) and_test -> . not_test and_test_star
    (67) not_test -> . NOT not_test
    (68) not_test -> . comparison
    (69) comparison -> . arith_expr
    (70) comparison -> . arith_expr comparison_star
    (81) arith_expr -> . term
    (82) arith_expr -> . term arith_expr_star
    (87) term -> . factor
    (88) term -> . factor term_star
    (97) factor -> . PLUS factor
    (98) factor -> . MINUS factor
    (99) factor -> . power
    (100) power -> . atom
    (101) power -> . atom DOUBLESTAR factor
    (102) power -> . atom power_star
    (103) power -> . atom power_star DOUBLESTAR factor
    (106) atom -> . LPAR RPAR
    (107) atom -> . LPAR expression RPAR
    (108) atom -> . fcndef LPAR RPAR
    (109) atom -> . fcndef LPAR arglist RPAR
    (110) atom -> . STRING
    (111) atom -> . IMAG_NUMBER
    (112) atom -> . FLOAT_NUMBER
    (113) atom -> . HEX_NUMBER
    (114) atom -> . OCT_NUMBER
    (115) atom -> . DEC_NUMBER
    (116) atom -> . ATARG
    (117) atom -> . NAME

    RPAR            shift and go to state 41
    IF              shift and go to state 22
    LBRACE          shift and go to state 1
    NOT             shift and go to state 20
    PLUS            shift and go to state 32
    MINUS           shift and go to state 17
    LPAR            shift and go to state 3
    STRING          shift and go to state 25
    IMAG_NUMBER     shift and go to state 13
    FLOAT_NUMBER    shift and go to state 11
    HEX_NUMBER      shift and go to state 27
    OCT_NUMBER      shift and go to state 2
    DEC_NUMBER      shift and go to state 29
    ATARG           shift and go to state 16
    NAME            shift and go to state 43

    power                          shift and go to state 24
    fcndef                         shift and go to state 5
    factor                         shift and go to state 6
    arith_expr                     shift and go to state 35
    comparison                     shift and go to state 8
    or_test                        shift and go to state 9
    not_test                       shift and go to state 30
    atom                           shift and go to state 21
    ifblock                        shift and go to state 28
    expression                     shift and go to state 42
    and_test                       shift and go to state 14
    term                           shift and go to state 33

state 4

    (26) assignment -> fcnndef .

    SEMI            reduce using rule 26 (assignment -> fcnndef .)
    IF              reduce using rule 26 (assignment -> fcnndef .)
    LBRACE          reduce using rule 26 (assignment -> fcnndef .)
    NAME            reduce using rule 26 (assignment -> fcnndef .)
    DEF             reduce using rule 26 (assignment -> fcnndef .)
    NOT             reduce using rule 26 (assignment -> fcnndef .)
    PLUS            reduce using rule 26 (assignment -> fcnndef .)
    MINUS           reduce using rule 26 (assignment -> fcnndef .)
    LPAR            reduce using rule 26 (assignment -> fcnndef .)
    STRING          reduce using rule 26 (assignment -> fcnndef .)
    IMAG_NUMBER     reduce using rule 26 (assignment -> fcnndef .)
    FLOAT_NUMBER    reduce using rule 26 (assignment -> fcnndef .)
    HEX_NUMBER      reduce using rule 26 (assignment -> fcnndef .)
    OCT_NUMBER      reduce using rule 26 (assignment -> fcnndef .)
    DEC_NUMBER      reduce using rule 26 (assignment -> fcnndef .)
    ATARG           reduce using rule 26 (assignment -> fcnndef .)


state 5

    (29) expression -> fcndef .
    (108) atom -> fcndef . LPAR RPAR
    (109) atom -> fcndef . LPAR arglist RPAR

    SEMI            reduce using rule 29 (expression -> fcndef .)
    RBRACE          reduce using rule 29 (expression -> fcndef .)
    COLON           reduce using rule 29 (expression -> fcndef .)
    LBRACE          reduce using rule 29 (expression -> fcndef .)
    COMMA           reduce using rule 29 (expression -> fcndef .)
    RIGHTARROW      reduce using rule 29 (expression -> fcndef .)
    RPAR            reduce using rule 29 (expression -> fcndef .)
    RSQB            reduce using rule 29 (expression -> fcndef .)
    $end            reduce using rule 29 (expression -> fcndef .)
    ELSE            reduce using rule 29 (expression -> fcndef .)
    ELIF            reduce using rule 29 (expression -> fcndef .)
    LPAR            shift and go to state 44


state 6

    (87) term -> factor .
    (88) term -> factor . term_star
    (89) term_star -> . STAR factor
    (90) term_star -> . SLASH factor
    (91) term_star -> . PERCENT factor
    (92) term_star -> . DOUBLESLASH factor
    (93) term_star -> . term_star STAR factor
    (94) term_star -> . term_star SLASH factor
    (95) term_star -> . term_star PERCENT factor
    (96) term_star -> . term_star DOUBLESLASH factor

    PLUS            reduce using rule 87 (term -> factor .)
    MINUS           reduce using rule 87 (term -> factor .)
    LESS            reduce using rule 87 (term -> factor .)
    GREATER         reduce using rule 87 (term -> factor .)
    EQEQUAL         reduce using rule 87 (term -> factor .)
    GREATEREQUAL    reduce using rule 87 (term -> factor .)
    LESSEQUAL       reduce using rule 87 (term -> factor .)
    NOTEQUAL        reduce using rule 87 (term -> factor .)
    IN              reduce using rule 87 (term -> factor .)
    NOT             reduce using rule 87 (term -> factor .)
    AND             reduce using rule 87 (term -> factor .)
    OR              reduce using rule 87 (term -> factor .)
    ELSE            reduce using rule 87 (term -> factor .)
    ELIF            reduce using rule 87 (term -> factor .)
    SEMI            reduce using rule 87 (term -> factor .)
    $end            reduce using rule 87 (term -> factor .)
    RPAR            reduce using rule 87 (term -> factor .)
    COLON           reduce using rule 87 (term -> factor .)
    LBRACE          reduce using rule 87 (term -> factor .)
    RBRACE          reduce using rule 87 (term -> factor .)
    COMMA           reduce using rule 87 (term -> factor .)
    RSQB            reduce using rule 87 (term -> factor .)
    RIGHTARROW      reduce using rule 87 (term -> factor .)
    STAR            shift and go to state 45
    SLASH           shift and go to state 49
    PERCENT         shift and go to state 48
    DOUBLESLASH     shift and go to state 47

    term_star                      shift and go to state 46

state 7

    (27) fcnndef -> DEF . NAME LPAR paramlist RPAR closed_exprsuite

    NAME            shift and go to state 50


state 8

    (68) not_test -> comparison .

    AND             reduce using rule 68 (not_test -> comparison .)
    OR              reduce using rule 68 (not_test -> comparison .)
    COMMA           reduce using rule 68 (not_test -> comparison .)
    RPAR            reduce using rule 68 (not_test -> comparison .)
    SEMI            reduce using rule 68 (not_test -> comparison .)
    RBRACE          reduce using rule 68 (not_test -> comparison .)
    $end            reduce using rule 68 (not_test -> comparison .)
    COLON           reduce using rule 68 (not_test -> comparison .)
    LBRACE          reduce using rule 68 (not_test -> comparison .)
    RSQB            reduce using rule 68 (not_test -> comparison .)
    RIGHTARROW      reduce using rule 68 (not_test -> comparison .)
    ELSE            reduce using rule 68 (not_test -> comparison .)
    ELIF            reduce using rule 68 (not_test -> comparison .)


state 9

    (30) expression -> or_test .

    SEMI            reduce using rule 30 (expression -> or_test .)
    RBRACE          reduce using rule 30 (expression -> or_test .)
    COLON           reduce using rule 30 (expression -> or_test .)
    LBRACE          reduce using rule 30 (expression -> or_test .)
    COMMA           reduce using rule 30 (expression -> or_test .)
    RIGHTARROW      reduce using rule 30 (expression -> or_test .)
    RPAR            reduce using rule 30 (expression -> or_test .)
    RSQB            reduce using rule 30 (expression -> or_test .)
    $end            reduce using rule 30 (expression -> or_test .)
    ELSE            reduce using rule 30 (expression -> or_test .)
    ELIF            reduce using rule 30 (expression -> or_test .)


state 10

    (13) suite_star2 -> assignment .
    (14) suite_star2 -> assignment . suite_star2_star
    (17) suite_star2_star -> . SEMI
    (18) suite_star2_star -> . suite_star2_star SEMI

    IF              reduce using rule 13 (suite_star2 -> assignment .)
    LBRACE          reduce using rule 13 (suite_star2 -> assignment .)
    NAME            reduce using rule 13 (suite_star2 -> assignment .)
    DEF             reduce using rule 13 (suite_star2 -> assignment .)
    NOT             reduce using rule 13 (suite_star2 -> assignment .)
    PLUS            reduce using rule 13 (suite_star2 -> assignment .)
    MINUS           reduce using rule 13 (suite_star2 -> assignment .)
    LPAR            reduce using rule 13 (suite_star2 -> assignment .)
    STRING          reduce using rule 13 (suite_star2 -> assignment .)
    IMAG_NUMBER     reduce using rule 13 (suite_star2 -> assignment .)
    FLOAT_NUMBER    reduce using rule 13 (suite_star2 -> assignment .)
    HEX_NUMBER      reduce using rule 13 (suite_star2 -> assignment .)
    OCT_NUMBER      reduce using rule 13 (suite_star2 -> assignment .)
    DEC_NUMBER      reduce using rule 13 (suite_star2 -> assignment .)
    ATARG           reduce using rule 13 (suite_star2 -> assignment .)
    SEMI            shift and go to state 51

    suite_star2_star               shift and go to state 52

state 11

    (112) atom -> FLOAT_NUMBER .

    DOUBLESTAR      reduce using rule 112 (atom -> FLOAT_NUMBER .)
    LPAR            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    LSQB            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    DOT             reduce using rule 112 (atom -> FLOAT_NUMBER .)
    STAR            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    SLASH           reduce using rule 112 (atom -> FLOAT_NUMBER .)
    PERCENT         reduce using rule 112 (atom -> FLOAT_NUMBER .)
    DOUBLESLASH     reduce using rule 112 (atom -> FLOAT_NUMBER .)
    PLUS            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    MINUS           reduce using rule 112 (atom -> FLOAT_NUMBER .)
    LESS            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    GREATER         reduce using rule 112 (atom -> FLOAT_NUMBER .)
    EQEQUAL         reduce using rule 112 (atom -> FLOAT_NUMBER .)
    GREATEREQUAL    reduce using rule 112 (atom -> FLOAT_NUMBER .)
    LESSEQUAL       reduce using rule 112 (atom -> FLOAT_NUMBER .)
    NOTEQUAL        reduce using rule 112 (atom -> FLOAT_NUMBER .)
    IN              reduce using rule 112 (atom -> FLOAT_NUMBER .)
    NOT             reduce using rule 112 (atom -> FLOAT_NUMBER .)
    AND             reduce using rule 112 (atom -> FLOAT_NUMBER .)
    OR              reduce using rule 112 (atom -> FLOAT_NUMBER .)
    COLON           reduce using rule 112 (atom -> FLOAT_NUMBER .)
    LBRACE          reduce using rule 112 (atom -> FLOAT_NUMBER .)
    SEMI            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    $end            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    RBRACE          reduce using rule 112 (atom -> FLOAT_NUMBER .)
    RPAR            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    COMMA           reduce using rule 112 (atom -> FLOAT_NUMBER .)
    RSQB            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    RIGHTARROW      reduce using rule 112 (atom -> FLOAT_NUMBER .)
    ELSE            reduce using rule 112 (atom -> FLOAT_NUMBER .)
    ELIF            reduce using rule 112 (atom -> FLOAT_NUMBER .)


state 12

    (2) body -> body_star . suite
    (4) body_star -> body_star . SEMI
    (5) suite -> . expression
    (6) suite -> . expression suite_star
    (7) suite -> . suite_star2 expression
    (8) suite -> . suite_star2 expression suite_star3
    (28) expression -> . ifblock
    (29) expression -> . fcndef
    (30) expression -> . or_test
    (13) suite_star2 -> . assignment
    (14) suite_star2 -> . assignment suite_star2_star
    (15) suite_star2 -> . suite_star2 assignment
    (16) suite_star2 -> . suite_star2 assignment suite_star2_star
    (51) ifblock -> . IF expression exprsuite ELSE exprsuite
    (52) ifblock -> . IF expression exprsuite ifblock_star ELSE exprsuite
    (34) fcndef -> . LBRACE paramlist RIGHTARROW suite RBRACE
    (59) or_test -> . and_test
    (60) or_test -> . and_test or_test_star
    (25) assignment -> . lvalues EQUAL closed_expression
    (26) assignment -> . fcnndef
    (63) and_test -> . not_test
    (64) and_test -> . not_test and_test_star
    (19) lvalues -> . NAME
    (20) lvalues -> . NAME COMMA
    (21) lvalues -> . lvalues_star NAME
    (22) lvalues -> . lvalues_star NAME COMMA
    (27) fcnndef -> . DEF NAME LPAR paramlist RPAR closed_exprsuite
    (67) not_test -> . NOT not_test
    (68) not_test -> . comparison
    (23) lvalues_star -> . NAME COMMA
    (24) lvalues_star -> . lvalues_star NAME COMMA
    (69) comparison -> . arith_expr
    (70) comparison -> . arith_expr comparison_star
    (81) arith_expr -> . term
    (82) arith_expr -> . term arith_expr_star
    (87) term -> . factor
    (88) term -> . factor term_star
    (97) factor -> . PLUS factor
    (98) factor -> . MINUS factor
    (99) factor -> . power
    (100) power -> . atom
    (101) power -> . atom DOUBLESTAR factor
    (102) power -> . atom power_star
    (103) power -> . atom power_star DOUBLESTAR factor
    (106) atom -> . LPAR RPAR
    (107) atom -> . LPAR expression RPAR
    (108) atom -> . fcndef LPAR RPAR
    (109) atom -> . fcndef LPAR arglist RPAR
    (110) atom -> . STRING
    (111) atom -> . IMAG_NUMBER
    (112) atom -> . FLOAT_NUMBER
    (113) atom -> . HEX_NUMBER
    (114) atom -> . OCT_NUMBER
    (115) atom -> . DEC_NUMBER
    (116) atom -> . ATARG
    (117) atom -> . NAME

    SEMI            shift and go to state 54
    IF              shift and go to state 22
    LBRACE          shift and go to state 1
    NAME            shift and go to state 15
    DEF             shift and go to state 7
    NOT             shift and go to state 20
    PLUS            shift and go to state 32
    MINUS           shift and go to state 17
    LPAR            shift and go to state 3
    STRING          shift and go to state 25
    IMAG_NUMBER     shift and go to state 13
    FLOAT_NUMBER    shift and go to state 11
    HEX_NUMBER      shift and go to state 27
    OCT_NUMBER      shift and go to state 2
    DEC_NUMBER      shift and go to state 29
    ATARG           shift and go to state 16

    not_test                       shift and go to state 30
    suite                          shift and go to state 53
    lvalues_star                   shift and go to state 18
    fcnndef                        shift and go to state 4
    term                           shift and go to state 33
    lvalues                        shift and go to state 23
    power                          shift and go to state 24
    suite_star2                    shift and go to state 26
    fcndef                         shift and go to state 5
    factor                         shift and go to state 6
    ifblock                        shift and go to state 28
    comparison                     shift and go to state 8
    or_test                        shift and go to state 9
    assignment                     shift and go to state 10
    atom                           shift and go to state 21
    arith_expr                     shift and go to state 35
    expression                     shift and go to state 31
    and_test                       shift and go to state 14

state 13

    (111) atom -> IMAG_NUMBER .
